jenkins/generated/jenkins/templates/controller-svc.yaml
---
# Source: jenkins/templates/controller-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: "jenkins"
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: jenkins
    app.kubernetes.io/version: 2.462.3
    helm.sh/chart: jenkins-13.4.23
spec:
  type: LoadBalancer
  externalTrafficPolicy: "Cluster"
  sessionAffinity: None
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/name: jenkins
    app.kubernetes.io/component: jenkins-controller
